Modificación en el contenido de mi experiencia

--- a/index.html
+++ b/index.html
@@ -134,12 +134,9 @@
               style="background-image: url(assets/img/card-1.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+              <h5 class="card-title fw-bold">Trabajos en construcción</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                Profesional con un año dos meses de experiencia en la construcción.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -154,12 +151,9 @@
               style="background-image: url(assets/img/card-2.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+              <h5 class="card-title fw-bold">Voluntariado programación</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                volunraria hacer dos años en fundación niñas pro chile.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -174,12 +168,9 @@
               style="background-image: url(assets/img/card-3.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+              <h5 class="card-title fw-bold">Desarrollo web</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                Iniciando en el mundo IT con el desarrollo de paginas web.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -193,13 +184,6 @@
     <!-- Formulario para contactar -->
     <section id="Contacto" class="container my-5">
       <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-      <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
-      </p>
 
       <form>
         <div class="form-group mb-4">
